# gm-kfac

./: .gitignore  README.md  claude_code_prompt_v2.md  latency_optimization_prompt.md  order_execution_module_design_v03.md
order-execution-module/: CMakeLists.txt
order-execution-module/.cache/clangd/index/: arb_coordinator.h.DCA8E0FC4BC19590.idx  arb_pair.h.D33AD97D2698C83C.idx  conflict_resolver.h.6F96940EF7312ABB.idx  dummy_signal_generator.h.338B64E1E34BCEC4.idx  i_cex_gateway.h.9891DEEFBB9D68A5.idx  i_dex_gateway.h.F2594DD84AE919A2.idx  i_exchange_gateway.h.90FD9D2A56AC7BF8.idx  latency_tracker.h.E3C179BB7D873F8C.idx  logger.h.CB546B3B4420E88D.idx  main.cpp.8CE15D9B7F90EA7C.idx  mock_cex_gateway.h.10CD3043673364DA.idx  mock_dex_gateway.h.BAA4BF5523D59132.idx  (+11 more)
order-execution-module/config/: config.json
order-execution-module/src/: main.cpp
order-execution-module/src/core/: arb_coordinator.h  conflict_resolver.h  order_manager.h  portfolio_guard.h
order-execution-module/src/gateway/: i_cex_gateway.h  i_dex_gateway.h  i_exchange_gateway.h  mock_cex_gateway.h  mock_dex_gateway.h
order-execution-module/src/model/: arb_pair.h  order.h  portfolio.h  signal.h
order-execution-module/src/transport/: signal_receiver.h
order-execution-module/src/util/: async_logger.h  fixed_point.h  flat_hash_map.h  latency_tracker.h  logger.h  pos_key.h  spinlock.h  thread_pool.h  uuid.h
order-execution-module/test/: CMakeLists.txt  dummy_signal_generator.h  test_arb_coordinator.cpp  test_conflict_resolver.cpp  test_order_manager.cpp  test_portfolio_guard.cpp
(+1 files in other folders)
